--- a/projects/cli/package.json
+++ b/projects/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "elm-land",
-  "version": "0.19.5",
+  "version": "0.19.5-vela",
   "description": "Reliable web apps for everyone",
   "main": "index.js",
   "types": "./index.d.ts",
